--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" />
-        <activity android:name=".MainActivityWeek3">
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivityWeek3" />
+        <activity android:name=".MainActivityWeek4" />
+        <activity android:name=".MainActivityWeek4Ex1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
