--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CC3SecondActivityWeek5"/>
+        <activity
+            android:name=".navigation.NavigationActivity"
+            android:label="@string/title_activity_navigation"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".CC3ActivityWeek5" />
+        <activity android:name=".CC3SecondActivityWeek5" />
         <activity android:name=".CCActivityWeek5" />
         <activity android:name=".CCSecondActivityWeek5" />
         <activity android:name=".MainActivityWeek5" />
@@ -21,7 +26,11 @@
         <activity android:name=".MainActivityWeek4Ex1" />
         <activity android:name=".ThirdActivityWeek5" />
         <activity android:name=".SecondActivityWeek5" />
-        <activity android:name=".CC3ActivityWeek5">
+        <activity android:name=".week6.Week6Activity" />
+        <activity
+            android:name=".tab.TabActivity"
+            android:label="@string/title_activity_tab"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
