--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".tab.TabActivity"/>
+        <activity android:name=".tab.TabActivity" />
         <activity
             android:name=".navigation.NavigationActivity"
             android:label="@string/title_activity_navigation"
@@ -29,8 +29,9 @@
         <activity android:name=".ThirdActivityWeek5" />
         <activity android:name=".SecondActivityWeek5" />
         <activity android:name=".week6.Week6Activity" />
+        <activity android:name=".MainActivityWeek7" />
         <activity
-            android:name=".MainActivityWeek7"
+            android:name=".week8.RetrofitMainActivity"
             android:label="@string/title_activity_tab">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
